railway databaseConfig added

--- a/tweet-api/src/main/resources/application.properties
+++ b/tweet-api/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=tweet-api
+
+server.port = 9091
+
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.show-sql = true
+
+# Railway DataBase
+spring.datasource.url = jdbc:mysql://root:QxSWVGcmDvYgFqYGtKImyIKFBBQwMIvn@autorack.proxy.rlwy.net:10730/railway
+spring.datasource.username = railway
+spring.datasource.password = QxSWVGcmDvYgFqYGtKImyIKFBBQwMIvn
+spring.datasource.class-name = com.mysql.cj.jdbc.Driver
